# k8s-api-client-examples

./: Cargo.toml  README.md
examples/: get-service-endpoints.rs  watcher.rs
src/: main.rs
