[package]
name = "k8s-api-client-examples"
version = "0.1.0"
authors = ["kahgeh <kahgeh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.57"
kube-runtime = "0.57"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
tokio= { version="1.8.1", features=["full"] }
futures="0.3.15"